package dk.sdu.mmmi.cbse.common.data;

public enum EntityCategory {
    PLAYER,
    ENEMY,
    ASTEROID,
    PLAYER_BULLET,
    ENEMY_BULLET,
    UNKNOWN
}
