package dk.sdu.mmmi.cbse.common.data;

public enum GameState {
    START_MENU,
    PLAYING,
    PAUSED,
    GAME_OVER,
    VICTORY
}
