classDiagram
    class Entity {
        -UUID ID
        -double[] polygonCoordinates
        -double x, y, rotation
        -float radius
        -EntityCategory category
        -int maxHealth, health
        +damage(int) void
        +isDestroyed() boolean
        +setMaxHealth(int) void
    }
    class Player {
        -double velocityX, velocityY
    }
    class Enemy
    class Bullet {
        +LIFETIME_FRAMES int$
        +MAX_BULLETS int$
        -int framesRemaining
    }
    class Asteroid {
        -AsteroidSize size
    }
    class EntityCategory {
        <<enumeration>>
        PLAYER
        ENEMY
        ASTEROID
        PLAYER_BULLET
        ENEMY_BULLET
        UNKNOWN
    }
    class AsteroidSize {
        <<enumeration>>
        LARGE
        MEDIUM
        SMALL
        +getRadius() int
        +getSpeedMultiplier() double
        +smaller() AsteroidSize
    }
    class World {
        -Map~String,Entity~ entityMap
        +addEntity(Entity) String
        +removeEntity(Entity) void
        +getEntities() Collection
    }
    class GameData {
        -int displayWidth, displayHeight
        -int asteroidsRemaining
    }
    class PlayerState {
        +STARTING_LIVES int$
        +INVULNERABILITY_FRAMES int$
        -int lives
        -boolean gameOver
        +registerHit() void
        +consumeHitPending() boolean
        +loseLife() void
    }
    class ScoreState {
        -int score
        +addPoints(int) void
    }
    class WaveState {
        +VICTORY_WAVE int$
        -int waveNumber
        +nextWave() void
        +getSpeedMultiplier() double
    }
    class GameStateManager {
        -GameState state
        +startGame() void
        +togglePause() void
    }
    class GameState {
        <<enumeration>>
        START_MENU
        PLAYING
        PAUSED
        GAME_OVER
        VICTORY
    }
    class GameKeys {
        +isDown(int) boolean
        +isPressed(int) boolean
    }

    Entity <|-- Player
    Entity <|-- Enemy
    Entity <|-- Bullet
    Entity <|-- Asteroid
    Entity --> EntityCategory
    Asteroid --> AsteroidSize
    World o-- Entity
    GameData *-- PlayerState
    GameData *-- ScoreState
    GameData *-- WaveState
    GameData *-- GameStateManager
    GameData *-- GameKeys
    GameStateManager --> GameState
